[gd_scene load_steps=9 format=3 uid="uid://cjq8rreo8wsx3"]

[ext_resource type="Script" path="res://screens/game.gd" id="1_y85ni"]
[ext_resource type="PackedScene" uid="uid://tu0i27pvv40y" path="res://objects/tracking-camera/tracking-camera.tscn" id="2_328fl"]
[ext_resource type="Script" path="res://addons/sxgd-fx-nodes/overlays/gaussian-blur-overlay.gd" id="3_4dht1"]
[ext_resource type="Theme" uid="uid://2dbhct4wbreo" path="res://screens/title-theme.tres" id="4_d1son"]
[ext_resource type="Texture2D" uid="uid://cmd7qbws0xws4" path="res://objects/ball/ball.png" id="4_u67ws"]
[ext_resource type="FontFile" uid="uid://b0uwjlvt0sevu" path="res://addons/sxgd-icon-font/assets/otfs/Font Awesome 6 Free-Solid-900.otf" id="5_15fpt"]
[ext_resource type="Script" path="res://addons/sxgd-icon-font/nodes/label.gd" id="6_qcfhi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uxok1"]
atlas = ExtResource("4_u67ws")
region = Rect2(0, 0, 32, 32)

[node name="Root" type="Node2D"]
script = ExtResource("1_y85ni")

[node name="Camera" parent="." instance=ExtResource("2_328fl")]
position = Vector2(642, 363)
position_smoothing_enabled = true

[node name="PlayerRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CreaturesRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlurFX" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("3_4dht1")
strength = 0.0

[node name="HUD" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_d1son")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 2
alignment = 1

[node name="LevelEndLabel" type="RichTextLabel" parent="CanvasLayer/HUD/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Good job![/b]

Level finished in {{ time }} seconds.
You saved {{ creatures }} creatures.
[/center]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.27451)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_uxok1")

[node name="SavedCreaturesLabel" type="Label" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "{{ saved }} / {{ total }}"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="Label" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_15fpt")
theme_override_font_sizes/font_size = 32
text = "ï€—"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_qcfhi")
icon_name = "clock"
icon_size = 32

[node name="TimeLabel" type="Label" parent="CanvasLayer/HUD/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "{{ time }}
"
horizontal_alignment = 2
